[tool.poetry]
name = "spark"
version = "0.1.0"
description = ""
authors = ["romanov.ana <romanov.ana@promail366.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
pyspark = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
